<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_produtos"
            android:icon="@drawable/ic_product"
            android:title="@string/nav_produtos" />

        <item android:id="@+id/nav_sobre_nos"
            android:icon="@drawable/ic_sobre_nos"
            android:title="@string/nav_sobre_nos"/>

        <item android:id="@+id/nav_perfil"
            android:icon="@drawable/user"
            android:title="@string/nav_perfil"/>

        <item android:id="@+id/nav_faq"
            android:icon="@drawable/ic_forum_black"
            android:title="@string/nav_faq"/>

        <item android:id="@+id/nav_configuracoes"
            android:icon="@drawable/ic_configuracoes_black"
            android:title="@string/nav_configurações"/>

        <item android:id="@+id/nav_sair"
            android:icon="@drawable/ic_sair"
            android:title="@string/nav_sair"/>


    </group>
</menu>