<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layoutMenu_lateral"
    tools:context=".TelaSobreActivity"
    android:fitsSystemWindows="true">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <include layout="@layout/toolbar"/>


            <TextView
                android:id="@+id/mensagemInicial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:gravity="center_horizontal"
                android:text="A OMMANI"
                android:textStyle="bold"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textoSobre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_horizontal"
                android:text="@string/a_ommani"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/significado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:gravity="center_horizontal"
                android:text="MAS O QUE SIGNIFICA?"
                android:textStyle="bold"
                android:textSize="24sp" />
            <TextView
                android:id="@+id/significadoOM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_horizontal"
                android:text="@string/significado_om"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/significadoMANI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_horizontal"
                android:text="@string/significado_mani"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/mapa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:gravity="center_horizontal"
                android:text="E QUE LUGAR DO MUNDO A OMMANI TA??"
                android:textStyle="bold"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/mapaRes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_horizontal"
                android:text="@string/mapa"
                android:textSize="18sp" />

            <Button
                android:id="@+id/botao_mapa"
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                android:stateListAnimator="@null"
                android:textColor="#ff266a"
                android:text="VER MAPA" />

            <TextView
                android:id="@+id/Sociais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:gravity="center_horizontal"
                android:text="VEM CONHECER MAIS!!"
                android:textStyle="bold"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imgInsta"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:layout_gravity="center_horizontal"/>
            <ImageView
                android:id="@+id/imgFace"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:layout_gravity="center_horizontal"/>
            <ImageView
                android:id="@+id/imgSite"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:layout_gravity="center_horizontal"/>




        </LinearLayout>
</ScrollView>

    <include layout="@layout/nav_view" />




</androidx.drawerlayout.widget.DrawerLayout>